@@ -77,8 +77,8 @@
    (rst (T0 0) (T1 100) (TZ 0) (TX 0) (TB 0) (TC 1))
    (clk (T0 50) (T1 50) (TZ 0) (TX 0) (TB 0) (TC 20))
    (a (T0 100) (T1 0) (TZ 0) (TX 0) (TB 0) (TC 0))
-   (b (T0 0) (T1 100) (TZ 0) (TX 0) (TB 0) (TC 1))
-   (c (T0 50) (T1 50) (TZ 0) (TX 0) (TB 0) (TC 11))
+   (b (T0 0) (T1 100) (TZ 0) (TX 0) (TB 0) (TC 2))
+   (c (T0 50) (T1 50) (TZ 0) (TX 0) (TB 0) (TC 10))
    (d (T0 100) (T1 0) (TZ 0) (TX 0) (TB 0) (TC 0))
    (ev (T0 100) (T1 0) (TZ 0) (TX 0) (TB 0) (TC 0))
   )
