@@ -22,4 +22,4 @@ b00000000000000000000000000001010 %
 #15
 1$
 #20
-1#
+0$
